--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         //可以用字符或字符串分割
         arr=host.split('.');
         var hostName = arr[0];
+        hostName = hostName.toUpperCase();
 
         $(document).ready(function(){
             $("span.title").html(hostName);
