--- a/business-profile/index.html
+++ b/business-profile/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8"/>
-	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<link rel="stylesheet" type="text/css" href="/css/main.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-	<script src="js/main.js" charset='utf-8'></script>
+	<script src="/js/main.js" charset='utf-8'></script>
 	<script type="text/javascript">
         var host = window.location.host
         var arr=new Array();
@@ -30,14 +30,14 @@
 	<div class="menu">
 		<ul>
 			<li id="home"><a href="/">Home</a></li>
-			<li id="public"><a href="/business-profile/index.html">Business profile</a></li>
+			<li id="business-profile"><a href="/business-profile/index.html">Business profile</a></li>
 			<li id="about-us"><a href="/about-us/index.html">About-us</a></li>
 		</ul>
 	</div>
 	<div class="body">
 		<div class="about-us">
 
-			<div class="s_title">About-us: </div><div class="s_body"><span class="title">oyMm</span> is for you Solve technical problems and To provide one-stop construction services</div>
+			<div class="s_title">Business profile: </div><div class="s_body"><span class="title">oyMm</span> is for you Solve technical problems and To provide one-stop construction services</div>
 
 			<div class="s_title">Email:</div> <div class="s_body">iscodd@gmail.com</div>
 		</div>
