--- a/about-us/index.html
+++ b/about-us/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8"/>
-	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<link rel="stylesheet" type="text/css" href="/css/main.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-	<script src="js/main.js" charset='utf-8'></script>
+	<script src="/js/main.js" charset='utf-8'></script>
 	<script type="text/javascript">
         var host = window.location.host
         var arr=new Array();
