--- a/business-profile/index.html
+++ b/business-profile/index.html
@@ -15,7 +15,7 @@
             $("span.title").html(hostName.toUpperCase());
             $('head').append('<meta name="description" content="' + metadescription[hostName] + '"/>');
             $('head').append('<meta name="keywords" content="' + metakeywords[hostName] + '"/>');
-            $('head').append('<title>' + hostName + ': Home</title>');
+            $('head').append('<title>' + hostName + ': Business profile</title>');
             $('head').append('<meta charset="UTF-8"/>');
         });
 	</script>
