--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8"/>
+	<meta name="google-site-verification" content="seU2_Mnm5dv1zBI9HtrwUR4i1aRexXVGZb8Ag48_SlY" />
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script src="js/main.js" charset='utf-8'></script>
