商品信息表增加侵权等级字段

--- a/index.html
+++ b/index.html
@@ -44,6 +44,27 @@
 		</div>
 	</div>
 	<div class="footer">
+		<div class="links">
+			links: 
+			<a href="http://oymm.com">oymm</a> |
+			<a href="http://kqone.com">kqone</a> |
+			<a href="http://mkvs.com">mkvs</a> |
+			<a href="http://kantn.com">kantn</a> |
+			<a href="http://iiggo.com">iiggo</a> |
+			<a href="http://kccll.com">kccll</a> |
+			<a href="http://vaagg.com">vaagg</a> |
+			<a href="http://banjs.com">banjs</a> |
+			<a href="http://fvbook.com">fvbook</a> |
+			<a href="http://ccooz.com">ccooz</a> |
+			<a href="http://rxxyy.com">rxxyy</a> |
+			<a href="http://xxyya.com">xxyya</a> |
+			<a href="http://xxyyi.com">xxyyi</a> |
+			<a href="http://vxxyy.com">vxxyy</a> |
+			<a href="http://taacc.com">taacc</a> |
+			<a href="http://bbeeo.com">bbeeo</a> |
+			<a href="http://aaddb.com">aaddb</a>
+		</div>
 		<p><span class="title">oyMm</span> © 2019</p>
 	</div>
+
 </body>
