--- a/about-us/index.html
+++ b/about-us/index.html
@@ -63,6 +63,6 @@
 			<a href="http://bbeeo.com">bbeeo</a> |
 			<a href="http://aaddb.com">aaddb</a>
 		</div>
-		<p><span class="title">oyMm</span> © 2019</p>
+		<div><span class="title">oyMm</span> © 2019</div>
 	</div>
 </body>
