--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 	<div class="header">
 		<div class="logoimge"></div>
 		<h1><span class="title">oyMm</span></h1>
-		<h2>Let <span class="title">oyMm</span> The service you</h2>
+		<h2>Let <span class="title"></span> The service you</h2>
 	</div>
 	<div class="menu">
 		<ul>
@@ -52,7 +52,7 @@
 	<div class="body">
 		<div class="about-us">
 
-			<div class="s_title">About-us: </div><div class="s_body"><span class="title">oyMm</span> is for you Solve technical problems and To provide one-stop construction services</div>
+			<div class="s_title">About-us: </div><div class="s_body"><span class="title"></span> is for you Solve technical problems and To provide one-stop construction services</div>
 
 			<div class="s_title">Email:</div> <div class="s_body">iscodd@gmail.com</div>
 		</div>
@@ -78,6 +78,6 @@
 			<a href="http://bbeeo.com">bbeeo</a> |
 			<a href="http://aaddb.com">aaddb</a>
 		</div>
-		<div><span class="title">oyMm</span> © 2019</div>
+		<div><span class="title"></span> © 2019</div>
 	</div>
 </body>
