--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <body class="home">
 	<div class="header">
 		<div class="logoimge"></div>
-		<h1><span class="title">oyMm</span></h1>
+		<h1><span class="title"></span></h1>
 		<h2>Let <span class="title"></span> The service you</h2>
 	</div>
 	<div class="menu">
