--- a/index.html
+++ b/index.html
@@ -39,17 +39,47 @@
 <body class="home">
 	<div class="header">
 		<div class="logoimge"></div>
-		<h1><span class="title"></span></h1>
-		<h2>Let <span class="title"></span> The service you</h2>
+		<h1><span class="title"></span>.com</h1>
+		<h2>Imagine your Brand in Times Square: <span class="title"></span></h2>
 	</div>
 	<div class="menu">
 		<ul>
 			<li id="home"><a href="/">Home</a></li>
+			<li id="brand_stories"><a href="/brand_stories/index.html">Brand Stories</a><li>
 			<li id="public"><a href="/business-profile/index.html">Business profile</a></li>
 			<li id="about-us"><a href="/about-us/index.html">About-us</a></li>
 		</ul>
 	</div>
 	<div class="body">
+		<div class="brand_stories">
+			<ul>
+				<li>
+					⭐
+		          	<p>This is the only .com brand of its kind</p>
+				</li>
+				<li>
+					⭐
+		          	<p>Any other extension drives traffic to this .com</p>
+				</li>
+				<li>
+					⭐
+		          <p>Almost all U.S. Fortune 500 companies use .com</p>
+				</li>
+				<li>
+					⭐
+		          	<p>Intuitive, memorable and easy to say and type</p>
+				</li>
+				<li>
+					⭐
+		          	<p>Better search engine optimization</p>
+				</li>
+				<li>
+					⭐
+		          <p>Better Brand recognition and authority</p>
+				</li>
+			</ul>
+		</div>
+
 		<div class="about-us">
 
 			<div class="s_title">About-us: </div><div class="s_body"><span class="title"></span> is for you Solve technical problems and To provide one-stop construction services</div>
