--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 	</div>
 	<div class="body">
 		<div class="brand_stories">
+			<h2>Benefits of a Great Brand</h2>
 			<ul>
 				<li>
 					⭐
@@ -79,12 +80,10 @@
 				</li>
 			</ul>
 		</div>
-
 		<div class="about-us">
+			<div class="s_title">About-us</div><div class="s_body"><span class="title"></span> is for you Solve technical problems and To provide one-stop construction services</div>
 
-			<div class="s_title">About-us: </div><div class="s_body"><span class="title"></span> is for you Solve technical problems and To provide one-stop construction services</div>
-
-			<div class="s_title">Email:</div> <div class="s_body">iscodd@gmail.com</div>
+			<div class="s_title">Email</div> <div class="s_body">iscodd@gmail.com</div>
 		</div>
 	</div>
 	<div class="footer">
