--- a/about-us/index.html
+++ b/about-us/index.html
@@ -82,9 +82,9 @@
 
 		<div class="about-us">
 
-			<div class="s_title">About-us: </div><div class="s_body"><span class="title"></span> is for you Solve technical problems and To provide one-stop construction services</div>
+			<div class="s_title">About-us</div><div class="s_body"><span class="title"></span> is for you Solve technical problems and To provide one-stop construction services</div>
 
-			<div class="s_title">Email:</div> <div class="s_body">iscodd@gmail.com</div>
+			<div class="s_title">Email</div> <div class="s_body">iscodd@gmail.com</div>
 		</div>
 	</div>
 	<div class="footer">
