--- a/business-profile/index.html
+++ b/business-profile/index.html
@@ -90,24 +90,24 @@
 	<div class="footer">
 		<div class="links">
 			links: 
-			<a href="http://oymm.com">oymm</a> |
-			<a href="http://kqone.com">kqone</a> |
-			<a href="http://mkvs.com">mkvs</a> |
-			<a href="http://kantn.com">kantn</a> |
-			<a href="http://iiggo.com">iiggo</a> |
-			<a href="http://kccll.com">kccll</a> |
-			<a href="http://vaagg.com">vaagg</a> |
-			<a href="http://banjs.com">banjs</a> |
-			<a href="http://fvbook.com">fvbook</a> |
-			<a href="http://ccooz.com">ccooz</a> |
-			<a href="http://rxxyy.com">rxxyy</a> |
-			<a href="http://xxyya.com">xxyya</a> |
-			<a href="http://xxyyi.com">xxyyi</a> |
-			<a href="http://vxxyy.com">vxxyy</a> |
-			<a href="http://taacc.com">taacc</a> |
-			<a href="http://bbeeo.com">bbeeo</a> |
-			<a href="http://aaddb.com">aaddb</a> |
-			<a href="http://almb.com">almb</a>
+			<a href="http://oymm.com" title="Oymm,Oymm Home">oymm</a> |
+			<a href="http://kqone.com" title="Kqone,Kqone Home">kqone</a> |
+			<a href="http://mkvs.com" title="Mkvs, Mkvs Home">mkvs</a> |
+			<a href="http://kantn.com" title="Kantn, KantnHome">kantn</a> |
+			<a href="http://iiggo.com" title="Iiggo, Iiggo Home">iiggo</a> |
+			<a href="http://kccll.com" title="Kccll, KccllHome">kccll</a> |
+			<a href="http://vaagg.com" title="Vaagg, Vaagg Home">vaagg</a> |
+			<a href="http://banjs.com" title="BanJs, BanJs Home">banjs</a> |
+			<a href="http://fvbook.com" title="FvBook, FvBook Home">fvbook</a> |
+			<a href="http://ccooz.com" title="ccooz, ccooz Home">ccooz</a> |
+			<a href="http://rxxyy.com" title="Rxxyy, Rxxyy Home">rxxyy</a> |
+			<a href="http://xxyya.com" title="xxyya, xxyya Home">xxyya</a> |
+			<a href="http://xxyyi.com" title="xxyyi, xxyyi Home">xxyyi</a> |
+			<a href="http://vxxyy.com" title="Vxxyy, Vxxyy Home">vxxyy</a> |
+			<a href="http://taacc.com" title="Taacc, Taacc Home">taacc</a> |
+			<a href="http://bbeeo.com" title="bbeeo, bbeeo Home">bbeeo</a> |
+			<a href="http://aaddb.com" title="aaddb, aaddb Home">aaddb</a> |
+			<a href="http://almb.com" title="Almb,Almb Home">almb</a>
 		</div>
 		<div><span class="title"></span> © 2019</div>
 	</div>
