--- a/about-us/index.html
+++ b/about-us/index.html
@@ -107,7 +107,7 @@
 			<a href="http://taacc.com" title="Taacc, Taacc Home">taacc</a> |
 			<a href="http://bbeeo.com" title="bbeeo, bbeeo Home">bbeeo</a> |
 			<a href="http://aaddb.com" title="aaddb, aaddb Home">aaddb</a> |
-			<a href="http://almb.com" title="Almb,Almb Home">almb</a>
+			<a href="http://almb.com" title="Almb,Almb Home">almb</a> |
 			<a href="http://taoerji.cn" title="taoerji,淘耳机,专业耳机交易">Taoerji</a>
 		</div>
 		<div><span class="title"></span> © 2019</div>
