--- a/about-us/index.html
+++ b/about-us/index.html
@@ -85,8 +85,11 @@
 			<div class="s_title">About-us</div><div class="s_body"><span class="title"></span> is for you Solve technical problems and To provide one-stop construction services</div>
 
 			<div class="s_title">Email</div> <div class="s_body">iscodd@gmail.com</div>
-			<div class="s_title">Buy <span class="title"></span></div>
-			<div class="s_body"><a title="buy domain" href="https://mi.aliyun.com/shop/40994"></div>
+			<div class="s_title">
+				<a title="buy domain" href="https://mi.aliyun.com/shop/40994">
+					Buy <span class="title"></span>
+				</a>
+			</div>
 		</div>
 	</div>
 	<div class="footer">
