--- a/sohh.net/index.html
+++ b/sohh.net/index.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" " http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns=" http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html>
 <head>
-<meta  http-equiv="refresh"  content = "0; url=http://www.sohh.com/">      
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
+<meta charset="utf-8">
+<meta http-equiv="refresh" content="0;url=http://www.sohh.com"/>
 <title>SOHH - Hip-Hop, Rap Urban News, 搜HH,嘻哈新闻</title>
 <meta name="viewport" content="initial-scale=1.0, minimum-scale=1.0, height=device-height, width=device-width" />
 <meta property="og:title" content="SOHH.net" />
@@ -10,12 +10,10 @@
 <meta name="twitter:card" content="summary">
 <meta name="twitter:title" content="SOHH.net" />
 <meta name="twitter:description" content="Hip-Hop, Rap,Urban News, 搜HH,嘻哈新闻" />
-<style type="text/css">
-</style>
 </head>
 <body>
 <h1>
-	<a href="https://mi.aliyun.com/shop/40994">sohh.net域名出售<a>
+<a href="https://mi.aliyun.com/shop/40994">sohh.net域名出售<a>
 </h1>
 </body>
 </html>
