--- a/index.html
+++ b/index.html
@@ -93,23 +93,19 @@
 	<div class="footer">
 		<div class="links">
 			links: 
-			<a href="http://oymm.com" title="Oymm,Oymm Home">oymm</a> |
+			<a href="http://avaz.cn" title="avaz,avaz Home">avaz</a> |
+			<a href="http://ulub.net" title="ulub,ulub Home">ulub</a> |
+			<a href="http://sohh.net" title="SOHH - Hip-Hop, Rap Urban News, 搜HH,嘻哈新闻">sohh</a> |
+			<a href="http://cgoil.com" title="CG-OIL,刚果石油，CG-石油">cgoil</a> |
+			<a href="http://zubsb.com" title="zubsb, zubsb Home">zubsb</a> |
+			<a href="http://aadua.com" title="aadua, aadua Home">aadua</a> |
+			<a href="http://oymm.com" title="Oymm,Oymm Home, 偶遇美眉">oymm</a> |
 			<a href="http://kqone.com" title="Kqone,Kqone Home">kqone</a> |
 			<a href="http://mkvs.com" title="Mkvs, Mkvs Home">mkvs</a> |
 			<a href="http://kantn.com" title="Kantn, KantnHome">kantn</a> |
-			<a href="http://iiggo.com" title="Iiggo, Iiggo Home">iiggo</a> |
 			<a href="http://kccll.com" title="Kccll, KccllHome">kccll</a> |
-			<a href="http://vaagg.com" title="Vaagg, Vaagg Home">vaagg</a> |
 			<a href="http://banjs.com" title="BanJs, BanJs Home">banjs</a> |
 			<a href="http://fvbook.com" title="FvBook, FvBook Home">fvbook</a> |
-			<a href="http://ccooz.com" title="ccooz, ccooz Home">ccooz</a> |
-			<a href="http://rxxyy.com" title="Rxxyy, Rxxyy Home">rxxyy</a> |
-			<a href="http://xxyya.com" title="xxyya, xxyya Home">xxyya</a> |
-			<a href="http://xxyyi.com" title="xxyyi, xxyyi Home">xxyyi</a> |
-			<a href="http://vxxyy.com" title="Vxxyy, Vxxyy Home">vxxyy</a> |
-			<a href="http://taacc.com" title="Taacc, Taacc Home">taacc</a> |
-			<a href="http://bbeeo.com" title="bbeeo, bbeeo Home">bbeeo</a> |
-			<a href="http://aaddb.com" title="aaddb, aaddb Home">aaddb</a> |
 			<a href="http://almb.com" title="Almb,Almb Home">almb</a> |
 			<a href="http://zzltl.com" title="zzltl,zzltl Home">zzltl</a> |
 			<a href="http://taoerji.cn" title="taoerji,淘耳机,专业耳机交易">Taoerji</a>
